--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,20 @@ jobs:
                     "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
                     -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
                     -H "Content-Type: application/json"
+            - name: Notify Success
+              uses: rjstone/discord-webhook-notify@v1
+              if: success()
+              with:
+                  severity: info
+                  details: A new version of Pokedex Deployed 🚀
+                  webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+            - name: Notify Failure
+              uses: rjstone/discord-webhook-notify@v1
+              if: failure()
+              with:
+                  severity: error
+                  details: Build failed on commit ${{ github.event.pull_request.head.sha }}
+                  webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
     tag_release:
         if: github.event.pull_request.merged == true
