--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,12 +2,8 @@ name: CI/CD Deployment Pipeline
 
 on:
     pull_request:
-        types: [opened, synchronize, reopened, closed]
+        types: [closed]
         branches: [main]
-
-env:
-    SKIP_KEYWORD: '#skip'
-    DISCORD_AVATAR: 'https://cdn-icons-png.flaticon.com/512/2092/2092701.png'
 
 jobs:
     test:
@@ -29,19 +25,18 @@ jobs:
                   npm run test:e2e
 
             - name: Upload production build
-              if: github.event.pull_request.merged && !contains(github.event.pull_request.title, env.SKIP_KEYWORD)
+              if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
               uses: actions/upload-artifact@v4
               with:
                   name: production-build
                   path: dist/
 
     deploy:
-        if: github.event.pull_request.merged && !contains(github.event.pull_request.title, env.SKIP_KEYWORD)
+        if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
         needs: test
         runs-on: ubuntu-latest
-        permissions:
-            contents: write
         steps:
+            - run: sudo apt-get install -y jq
             - uses: actions/download-artifact@v4
               with:
                   name: production-build
@@ -53,6 +48,7 @@ jobs:
                   [ -f dist/bundle.js ] || { echo "::error::bundle.js missing!"; exit 1; }
 
             - name: Deploy to Render
+              id: deploy
               run: |
                   DEPLOY_RESPONSE=$(curl -s -X POST \
                     "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
@@ -61,18 +57,17 @@ jobs:
 
                   DEPLOY_ID=$(echo "$DEPLOY_RESPONSE" | jq -r '.id')
                   [ -n "$DEPLOY_ID" ] || { echo "::error::Deployment failed"; exit 1; }
-                  echo "DEPLOY_ID=$DEPLOY_ID" >> $GITHUB_ENV
-                  echo "::notice::✅ Deployment triggered! ID: $DEPLOY_ID"
+                  echo "DEPLOY_ID=$DEPLOY_ID" >> $GITHUB_OUTPUT
               env:
                   RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
                   RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
 
     tag_release:
-        if: github.event.pull_request.merged && !contains(github.event.pull_request.title, env.SKIP_KEYWORD)
+        if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
         needs: [test, deploy]
         runs-on: ubuntu-latest
-        permissions:
-            contents: write
+        outputs:
+            new_tag: ${{ steps.version.outputs.new_tag }}
         steps:
             - uses: actions/checkout@v4
               with:
@@ -91,36 +86,30 @@ jobs:
         runs-on: ubuntu-latest
         if: always()
         steps:
-            - name: Success notification
-              if: success() && github.event.pull_request.merged && !contains(github.event.pull_request.title, env.SKIP_KEYWORD)
-              uses: Ilshidur/action-discord@1.3.1
+            - name: Notify on Success
+              if: success() && github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
+              uses: rjstone/discord-webhook-notify@v1
               with:
-                  webhook: ${{ secrets.DISCORD_WEBHOOK }}
-                  title: '🚀 Deployment Successful'
-                  color: '0x00FF00'
-                  username: 'Deployment Bot'
-                  avatar: ${{ env.DISCORD_AVATAR }}
-                  description: |
-                      **New Version:** ${{ steps.version.outputs.new_tag || 'latest' }}
-                      **Deploy ID:** ${{ env.DEPLOY_ID }}
-                      **Commit:** [${GITHUB_SHA:0:7}]($GITHUB_SERVER_URL/$GITHUB_REPOSITORY/commit/$GITHUB_SHA)
-                      **PR:** #${{ github.event.pull_request.number }}
-                      **By:** ${{ github.event.pull_request.user.login }}
-                      **View Deployment:** https://dashboard.render.com/web/${{ secrets.RENDER_SERVICE_ID }}/deploys/${{ env.DEPLOY_ID }}
+                  severity: info
+                  username: Deployment Bot
+                  webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+                  text: |
+                      ✅ **Deployment successful**
+                      Version: ${{ needs.tag_release.outputs.new_tag || 'latest' }}
+                      PR: #${{ github.event.pull_request.number }}
+                      Commit: ${{ github.event.pull_request.head.sha }}
+                      Author: ${{ github.event.pull_request.user.login }}
 
-            - name: Failure notification
+            - name: Notify on Failure
               if: failure()
-              uses: Ilshidur/action-discord@1.3.1
+              uses: rjstone/discord-webhook-notify@v1
               with:
-                  webhook: ${{ secrets.DISCORD_WEBHOOK }}
-                  title: '❌ Pipeline Failed'
-                  color: '0xFF0000'
-                  username: 'Deployment Bot'
-                  avatar: ${{ env.DISCORD_AVATAR }}
-                  description: |
-                      **Failed Job:** ${{ needs.test.result || needs.deploy.result || needs.tag_release.result }}
-                      **Commit:** [${GITHUB_SHA:0:7}]($GITHUB_SERVER_URL/$GITHUB_REPOSITORY/commit/$GITHUB_SHA)
-                      **PR:** #${{ github.event.pull_request.number }}
-                      **By:** ${{ github.event.pull_request.user.login }}
-                      **Failed Step:** ${{ failure() }}
-                      **Logs:** $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
+                  severity: error
+                  username: Deployment Bot
+                  webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+                  text: |
+                      ❌ **Build or Deploy Failed**
+                      Commit: [${{ github.sha }}](${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }})
+                      PR: #${{ github.event.pull_request.number }}
+                      By: ${{ github.event.pull_request.user.login }}
+                      Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
