--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,89 +1,171 @@
 name: CI/CD Deployment Pipeline
 
 on:
-    pull_request:
-        types: [closed]
-        branches: [main]
+  pull_request:
+    types: [closed]
+    branches: [main]
 
 jobs:
-    test:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-node@v4
-              with:
-                  node-version: '20'
-                  cache: 'npm'
-            - run: npm ci
-            - run: npx playwright install --with-deps
-            - run: npm run lint
-            - run: npm run build
-            - run: npm test
-            - run: npm run test:e2e
-            - uses: actions/upload-artifact@v4
-              if: github.event.pull_request.merged == true
-              with:
-                  name: production-build
-                  path: dist/
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+      
+      - name: Install and test
+        run: |
+          npm ci
+          npx playwright install --with-deps
+          npm run lint
+          npm run build
+          npm test
+          npm run test:e2e
+      
+      - name: Upload production build
+        if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
+        uses: actions/upload-artifact@v4
+        with:
+          name: production-build
+          path: dist/
 
-    deploy:
-        if: github.event.pull_request.merged == true
-        needs: test
-        runs-on: ubuntu-latest
-        permissions:
-            contents: write
-        steps:
-            - uses: actions/download-artifact@v4
-              with:
-                  name: production-build
-                  path: dist
-            - run: |
-                  [ -f dist/index.html ] || exit 1
-                  [ -f dist/bundle.js ] || exit 1
-            - run: |
-                  curl -s -X POST \
-                    "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
-                    -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
-                    -H "Content-Type: application/json"
+  deploy:
+    if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
+    needs: test
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - run: sudo apt-get install -y jq
+      - uses: actions/download-artifact@v4
+        with:
+          name: production-build
+          path: dist
+      
+      - name: Verify build files
+        run: |
+          [ -f dist/index.html ] || { echo "::error::index.html missing!"; exit 1; }
+          [ -f dist/bundle.js ] || { echo "::error::bundle.js missing!"; exit 1; }
+      
+      - name: Deploy to Render
+        run: |
+          DEPLOY_RESPONSE=$(curl -s -X POST \
+            "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
+            -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
+            -H "Content-Type: application/json")
 
-    tag_release:
-        if: github.event.pull_request.merged == true
-        needs: deploy
-        runs-on: ubuntu-latest
-        permissions:
-            contents: write
-        steps:
-            - uses: actions/checkout@v4
-              with:
-                  ref: ${{ github.event.pull_request.merge_commit_sha }}
-                  fetch-depth: 0
-            - uses: anothrNick/github-tag-action@8c8163ef62cf9c4677c8e800f36270af27930f42
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEPLOY_ID=$(echo "$DEPLOY_RESPONSE" | jq -r '.id')
+          [ -n "$DEPLOY_ID" ] || { echo "::error::Deployment failed"; exit 1; }
+          echo "DEPLOY_ID=$DEPLOY_ID" >> $GITHUB_ENV
+          echo "::notice::✅ Deployment triggered! ID: $DEPLOY_ID"
+        env:
+          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
+          RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
 
-    notify-success:
-        if: github.event.pull_request.merged == true
-        needs: deploy
-        runs-on: ubuntu-latest
-        steps:
-            - name: Notify Discord of Success
-              uses: rjstone/discord-webhook-notify@v1
-              with:
-                  severity: info
-                  details: A new version of Pokedex deployed 🚀
-                  webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+  tag_release:
+    if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
+    needs: [test, deploy]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.merge_commit_sha }}
+          fetch-depth: '0'
+      - name: Bump version
+        id: version
+        uses: anothrNick/github-tag-action@8c8163ef62cf9c4677c8e800f36270af27930f42
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
+          WITH_V: false
 
-    notify-failure:
-        if: failure()
-        needs: test
-        runs-on: ubuntu-latest
-        steps:
-            - name: Notify Discord of Failure
-              uses: rjstone/discord-webhook-notify@v1
-              with:
-                  severity: error
-                  details: |
-                      ❌ Build failed for commit ${{ github.event.pull_request.head.sha }}
-                      Author: ${{ github.event.pull_request.user.login }}
-                      Message: ${{ github.event.pull_request.title }}
-                  webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+  notify:
+    needs: [test, deploy, tag_release]
+    runs-on: ubuntu-latest
+    if: always()
+    steps:
+      - name: Get workflow details
+        id: workflow
+        run: |
+          echo "run_id=$GITHUB_RUN_ID" >> $GITHUB_OUTPUT
+          echo "sha=${GITHUB_SHA:0:7}" >> $GITHUB_OUTPUT
+          echo "repo=$GITHUB_REPOSITORY" >> $GITHUB_OUTPUT
+          echo "server_url=$GITHUB_SERVER_URL" >> $GITHUB_OUTPUT
+          echo "pr_number=${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
+          echo "actor=${{ github.event.pull_request.user.login }}" >> $GITHUB_OUTPUT
+
+      - name: Send Discord notification
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const webhookUrl = '${{ secrets.DISCORD_WEBHOOK }}';
+            const status = '${{ job.status }}';
+            const deployId = process.env.DEPLOY_ID || 'N/A';
+            const newTag = '${{ steps.version.outputs.new_tag }}' || 'latest';
+            
+            const embed = {
+              title: status === 'success' ? '🚀 Deployment Successful' : '❌ Pipeline Failed',
+              color: status === 'success' ? 65280 : 16711680,
+              fields: [
+                {
+                  name: 'Status',
+                  value: status === 'success' ? 'Success' : 'Failed',
+                  inline: true
+                },
+                {
+                  name: 'Version',
+                  value: newTag,
+                  inline: true
+                },
+                {
+                  name: 'Deploy ID',
+                  value: deployId,
+                  inline: true
+                },
+                {
+                  name: 'Commit',
+                  value: `[${'${{ steps.workflow.outputs.sha }}'}](${'${{ steps.workflow.outputs.server_url }}'}/${'${{ steps.workflow.outputs.repo }}'}/commit/${'${{ github.sha }}'})`,
+                  inline: false
+                },
+                {
+                  name: 'PR',
+                  value: `#${'${{ steps.workflow.outputs.pr_number }}'}`,
+                  inline: true
+                },
+                {
+                  name: 'By',
+                  value: '${{ steps.workflow.outputs.actor }}',
+                  inline: true
+                }
+              ],
+              timestamp: new Date().toISOString()
+            };
+
+            if (status !== 'success') {
+              embed.fields.push({
+                name: 'Logs',
+                value: `${'${{ steps.workflow.outputs.server_url }}'}/${'${{ steps.workflow.outputs.repo }}'}/actions/runs/${'${{ steps.workflow.outputs.run_id }}'}`,
+                inline: false
+              });
+              embed.fields.push({
+                name: 'Failed Job',
+                value: '${{ needs.test.result || needs.deploy.result || needs.tag_release.result }}',
+                inline: false
+              });
+            }
+
+            await fetch(webhookUrl, {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json'
+              },
+              body: JSON.stringify({
+                username: 'Deployment Bot',
+                avatar_url: 'https://cdn-icons-png.flaticon.com/512/2092/2092701.png',
+                embeds: [embed]
+              })
+            });
