--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,172 +1,177 @@
 name: CI/CD Deployment Pipeline
 
 on:
-    pull_request:
-        types: [closed]
-        branches: [main]
+  pull_request:
+    types: [closed]
+    branches: [main]
 
 jobs:
-    test:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-node@v4
-              with:
-                  node-version: '20'
-                  cache: 'npm'
-
-            - name: Install and test
-              run: |
-                  npm ci
-
-                  npx playwright install --with-deps
-                  npm run lint
-                  npm run build
-                  npm test
-                  npm run test:e2e
-
-            - name: Upload production build
-              if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
-              uses: actions/upload-artifact@v4
-              with:
-                  name: production-build
-                  path: dist/
-
-    deploy:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+      
+      - name: Install and test
+        run: |
+          npm ci
+          npx playwright install --with-deps
+          npm run lint
+          npm run build
+          npm test
+          npm run test:e2e
+      
+      - name: Upload production build
         if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
-        needs: test
-        runs-on: ubuntu-latest
-        permissions:
-            contents: write
-        steps:
-            - run: sudo apt-get install -y jq
-            - uses: actions/download-artifact@v4
-              with:
-                  name: production-build
-                  path: dist
+        uses: actions/upload-artifact@v4
+        with:
+          name: production-build
+          path: dist/
 
-            - name: Verify build files
-              run: |
-                  [ -f dist/index.html ] || { echo "::error::index.html missing!"; exit 1; }
-                  [ -f dist/bundle.js ] || { echo "::error::bundle.js missing!"; exit 1; }
+  deploy:
+    if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
+    needs: test
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - run: sudo apt-get install -y jq
+      - uses: actions/download-artifact@v4
+        with:
+          name: production-build
+          path: dist
+      
+      - name: Verify build files
+        run: |
+          [ -f dist/index.html ] || { echo "::error::index.html missing!"; exit 1; }
+          [ -f dist/bundle.js ] || { echo "::error::bundle.js missing!"; exit 1; }
+      
+      - name: Deploy to Render
+        run: |
+          DEPLOY_RESPONSE=$(curl -s -X POST \
+            "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
+            -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
+            -H "Content-Type: application/json")
 
-            - name: Deploy to Render
-              run: |
-                  DEPLOY_RESPONSE=$(curl -s -X POST \
-                    "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
-                    -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
-                    -H "Content-Type: application/json")
+          DEPLOY_ID=$(echo "$DEPLOY_RESPONSE" | jq -r '.id')
+          [ -n "$DEPLOY_ID" ] || { echo "::error::Deployment failed"; exit 1; }
+          echo "DEPLOY_ID=$DEPLOY_ID" >> $GITHUB_ENV
+          echo "::notice::✅ Deployment triggered! ID: $DEPLOY_ID"
+        env:
+          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
+          RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
 
-                  DEPLOY_ID=$(echo "$DEPLOY_RESPONSE" | jq -r '.id')
-                  [ -n "$DEPLOY_ID" ] || { echo "::error::Deployment failed"; exit 1; }
-                  echo "DEPLOY_ID=$DEPLOY_ID" >> $GITHUB_ENV
-                  echo "::notice::✅ Deployment triggered! ID: $DEPLOY_ID"
-              env:
-                  RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-                  RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
+  tag_release:
+    if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
+    needs: [test, deploy]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.merge_commit_sha }}
+          fetch-depth: '0'
+      - name: Bump version
+        id: version
+        uses: anothrNick/github-tag-action@8c8163ef62cf9c4677c8e800f36270af27930f42
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
+          WITH_V: false
 
-    tag_release:
-        if: github.event.pull_request.merged == true && !contains(github.event.pull_request.title, '#skip')
-        needs: [test, deploy]
-        runs-on: ubuntu-latest
-        permissions:
-            contents: write
-        steps:
-            - uses: actions/checkout@v4
-              with:
-                  ref: ${{ github.event.pull_request.merge_commit_sha }}
-                  fetch-depth: '0'
-            - name: Bump version
-              id: version
-              uses: anothrNick/github-tag-action@8c8163ef62cf9c4677c8e800f36270af27930f42
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  DEFAULT_BUMP: patch
-                  WITH_V: false
+  notify:
+    needs: [test, deploy, tag_release]
+    runs-on: ubuntu-latest
+    if: always()
+    steps:
+      - name: Get commit details
+        id: commit
+        run: |
+          echo "event_name=$GITHUB_EVENT_NAME" >> $GITHUB_OUTPUT
+          echo "repo=$GITHUB_REPOSITORY" >> $GITHUB_OUTPUT
+          echo "ref=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
+          echo "workflow=$GITHUB_WORKFLOW" >> $GITHUB_OUTPUT
+          echo "actor=$GITHUB_ACTOR" >> $GITHUB_OUTPUT
+          echo "commit_url=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/commit/$GITHUB_SHA" >> $GITHUB_OUTPUT
+          
+          # Get commit message (first line only)
+          COMMIT_MSG=$(git log --format=%B -n 1 $GITHUB_SHA | head -n 1)
+          echo "commit_msg=${COMMIT_MSG//$'\n'/' '}" >> $GITHUB_OUTPUT
 
-    notify:
-        needs: [test, deploy, tag_release]
-        runs-on: ubuntu-latest
-        if: always()
-        steps:
-            - name: Get workflow details
-              id: workflow
-              run: |
-                  echo "run_id=$GITHUB_RUN_ID" >> $GITHUB_OUTPUT
-                  echo "sha=${GITHUB_SHA:0:7}" >> $GITHUB_OUTPUT
-                  echo "repo=$GITHUB_REPOSITORY" >> $GITHUB_OUTPUT
-                  echo "server_url=$GITHUB_SERVER_URL" >> $GITHUB_OUTPUT
-                  echo "pr_number=${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
-                  echo "actor=${{ github.event.pull_request.user.login }}" >> $GITHUB_OUTPUT
+      - name: Send Discord notification
+        uses: actions/github-script@v6
+        env:
+          DEPLOY_ID: ${{ env.DEPLOY_ID }}
+          NEW_TAG: ${{ steps.version.outputs.new_tag || 'latest' }}
+          JOB_RESULT: ${{ needs.test.result || needs.deploy.result || needs.tag_release.result }}
+        with:
+          script: |
+            const webhookUrl = '${{ secrets.DISCORD_WEBHOOK }}';
+            const status = '${{ job.status }}';
+            
+            const embed = {
+              title: status === 'success' ? 'A new version of Pokedex Deployed' : 'Build/Deployment Failed',
+              color: status === 'success' ? 65280 : 16711680,
+              fields: [
+                {
+                  name: 'Version',
+                  value: process.env.NEW_TAG,
+                  inline: true
+                },
+                {
+                  name: 'Status',
+                  value: status === 'success' ? '✅ Success' : '❌ Failed',
+                  inline: true
+                },
+                {
+                  name: 'Deploy ID',
+                  value: process.env.DEPLOY_ID || 'N/A',
+                  inline: true
+                },
+                {
+                  name: 'Commit',
+                  value: '[${'${{ github.sha }}'.substring(0,7)}](${{ steps.commit.outputs.commit_url }})',
+                  inline: true
+                },
+                {
+                  name: 'Message',
+                  value: '${{ steps.commit.outputs.commit_msg }}',
+                  inline: true
+                },
+                {
+                  name: 'By',
+                  value: '${{ steps.commit.outputs.actor }}',
+                  inline: true
+                }
+              ],
+              timestamp: new Date().toISOString()
+            };
 
-            - name: Send Discord notification
-              uses: actions/github-script@v6
-              with:
-                  script: |
-                      const webhookUrl = '${{ secrets.DISCORD_WEBHOOK }}';
-                      const status = '${{ job.status }}';
-                      const deployId = process.env.DEPLOY_ID || 'N/A';
-                      const newTag = '${{ steps.version.outputs.new_tag }}' || 'latest';
+            if (status !== 'success') {
+              embed.fields.push({
+                name: 'Failed Job',
+                value: process.env.JOB_RESULT,
+                inline: false
+              });
+              embed.fields.push({
+                name: 'Logs',
+                value: `[View Logs]($GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID)`,
+                inline: false
+              });
+            }
 
-                      const embed = {
-                        title: status === 'success' ? '🚀 Deployment Successful' : '❌ Pipeline Failed',
-                        color: status === 'success' ? 65280 : 16711680,
-                        fields: [
-                          {
-                            name: 'Status',
-                            value: status === 'success' ? 'Success' : 'Failed',
-                            inline: true
-                          },
-                          {
-                            name: 'Version',
-                            value: newTag,
-                            inline: true
-                          },
-                          {
-                            name: 'Deploy ID',
-                            value: deployId,
-                            inline: true
-                          },
-                          {
-                            name: 'Commit',
-                            value: `[${'${{ steps.workflow.outputs.sha }}'}](${'${{ steps.workflow.outputs.server_url }}'}/${'${{ steps.workflow.outputs.repo }}'}/commit/${'${{ github.sha }}'})`,
-                            inline: false
-                          },
-                          {
-                            name: 'PR',
-                            value: `#${'${{ steps.workflow.outputs.pr_number }}'}`,
-                            inline: true
-                          },
-                          {
-                            name: 'By',
-                            value: '${{ steps.workflow.outputs.actor }}',
-                            inline: true
-                          }
-                        ],
-                        timestamp: new Date().toISOString()
-                      };
-
-                      if (status !== 'success') {
-                        embed.fields.push({
-                          name: 'Logs',
-                          value: `${'${{ steps.workflow.outputs.server_url }}'}/${'${{ steps.workflow.outputs.repo }}'}/actions/runs/${'${{ steps.workflow.outputs.run_id }}'}`,
-                          inline: false
-                        });
-                        embed.fields.push({
-                          name: 'Failed Job',
-                          value: '${{ needs.test.result || needs.deploy.result || needs.tag_release.result }}',
-                          inline: false
-                        });
-                      }
-
-                      await fetch(webhookUrl, {
-                        method: 'POST',
-                        headers: {
-                          'Content-Type': 'application/json'
-                        },
-                        body: JSON.stringify({
-                          username: 'Deployment Bot',
-                          avatar_url: 'https://cdn-icons-png.flaticon.com/512/2092/2092701.png',
-                          embeds: [embed]
-                        })
-                      });
+            await fetch(webhookUrl, {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json'
+              },
+              body: JSON.stringify({
+                username: 'Pokedex CI/CD',
+                avatar_url: 'https://cdn-icons-png.flaticon.com/512/188/188987.png',
+                embeds: [embed]
+              })
+            });
